--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^10.1.0"
+    "cypress": "^10.1.0",
+      "mochawesome": "^7.1.3",
+      "mochawesome-merge": "^4.3.0"
+    }
   }
-}
+
 
 
