resolved conflicts and changed the report dir in jenkins

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^10.1.0",
-    "cypress-mochawesome-reporter": "^3.8.0"
+    "cypress": "^10.1.0"
   }
 }
